syntax = "proto3";
package user;

option go_package = "internal/protobuf";
option java_package = "com.example.book_exchange.protobuf";
option java_multiple_files = true;

message UserData {
    string login = 1;
    string password = 2;
}

message User {
    int64 id = 1;
    string login = 2;
    bool isAdmin = 3;
}

message Token {
    string token = 1;
}

service UserService {
    rpc GetUserByToken(Token) returns (User);
    rpc SignInOrSignUp(UserData) returns (Token);
}
